--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "latte:lint": "ng lint latte",
+    "latte:test:dev": "ng test latte",
+    "latte:test:prod": "ng test latte --configuration production",
+    "latte:build:watch": "ng build latte --watch --poll=2000",
+    "latte:build:dev": "ng build latte",
+    "latte:build:prod": "ng build latte --configuration production",
+    "latte:preview:serve": "ng serve latte-preview --poll=2000",
+    "latte:preview:build:prod": "ng build latte-preview --configuration production",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
@@ -27,6 +32,8 @@
     "@angular/cli": "^18.0.1",
     "@angular/compiler-cli": "^18.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "18.3.0",
+    "eslint": "^9.9.0",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -34,6 +41,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "ng-packagr": "^18.2.0",
-    "typescript": "~5.4.2"
+    "typescript": "~5.4.2",
+    "typescript-eslint": "8.1.0"
   }
 }
