Update readme and command for running prod tests

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "latte:lint": "ng lint latte",
     "latte:test:dev": "ng test latte",
-    "latte:test:prod": "ng test latte --configuration production",
+    "latte:test:prod": "ng test latte --no-watch --no-progress --browsers=ChromeHeadless",
+    "latte:build": "ng build latte",
     "latte:build:watch": "ng build latte --watch --poll=2000",
     "latte:build:dev": "ng build latte",
     "latte:build:prod": "ng build latte --configuration production",
